# discord-publish-bot

./: .env.example  .env.local.example  .env.production.example  .gitignore  ACHIEVEMENT-SUMMARY.md  ACHIEVEMENT.md  DEPLOYMENT-QUICK-REF.md  Dockerfile  NEXT-STEPS.md  QUICK-REFERENCE.md  README.md  RESTRUCTURE-PLAN.md  TOMORROW-CHECKLIST.md  backlog.md  changelog.md  docker-compose.yml  pyproject.toml  requirements.txt  roadmap.md  run_bot.py  setup.py  test_modal_fix.py  test_timezone_fix.py
.github/: copilot-instructions.md
docs/adr/: adr-001-architecture-decision.md  adr-002-python-entry-points.md  adr-003-field-mapping-fix.md  adr-003-http-interactions-migration.md  adr-004-azure-container-apps-deployment.md  adr-005-docker-container-optimization.md  adr-006-scale-to-zero-configuration.md  adr-007-performance-configuration-for-scale-to-zero.md  adr-008-test-infrastructure-stabilization.md  adr-009-azure-deployment-status.md  adr-009-azure-production-deployment.md  adr-010-discord-modal-routing-fix.md  adr-010-response-type-enhancement.md  adr-011-azure-storage-integration.md  adr-011-discord-attachment-parameter-breakthrough.md  adr-012-directory-structure-alignment.md  adr-013-youtube-url-enhancement.md
docs/team/: azure-deployment-runbook.md  azure-storage-deployment-guide.md  credential-setup-guide.md  discord-attachment-breakthrough-report.md  onboarding-guide.md  phase-1-completion-report.md  phase-1-final-status-report.md  phase-2-completion-report.md  security-guidelines.md  security-setup-guide.md  test-infrastructure-stabilization-report.md  user-guide.md
projects/active/: PROJECT-COMPLETION-SUMMARY.md  azure-container-apps-deployment.md  discord-bot-enhancement-project.md  discord-integration-setup.md  discord-publish-bot.md  phase-3-testing-deployment.md
projects/archive/: azure-container-apps-deployment-COMPLETED-2025-08-10.md  custom-slug-alt-text-enhancement-COMPLETED-2025-09-07.md  discord-attachment-breakthrough-COMPLETED-2025-08-11.md  discord-bot-enhancement-COMPLETED-2025-08-08.md  discord-integration-setup-COMPLETED-2025-08-10.md  discord-publish-bot-COMPLETED-2025-08-08.md  field-mapping-bug-fix-COMPLETED-2025-08-08.md  http-interactions-migration-COMPLETED-2025-08-08.md  response-type-enhancement-COMPLETED-2025-08-10.md  test-migration-COMPLETED-2025-08-09.md
scripts/: .gitkeep  azure-secrets-setup.ps1  cleanup-test-branches.py  configure-container-access.ps1  demo-complete-workflow.py  dev.py  docker-naming.ps1  register-discord-commands.py  security-check.py  setup-azure-storage.ps1  setup-azure-storage.sh  test-api-curl.py  test-api-health.py  test-discord-integration.py  test-discord-interactions-basic.py  test-discord-interactions-e2e.py  test-discord-interactions.py  test-enhanced-workflow.py  test-frontmatter-validation.py  test-full-publishing-e2e.py  test-media-folders.py  test-media-type-detection.py  test-note-publishing.py  test-phase-2-linode.py  test-updated-frontmatter.py  verify-credentials.py
specs/: discord-publish-bot.org  media-reviews-rsvp.org
specs/api/: discord-publishing-api.md
specs/technical/: custom-slug-alt-text-enhancement.md  discord-publish-bot-technical-spec.md
src/: __init__.py  combined_app.py
src/discord_bot/: __init__.py  api_client.py  config.py  main.py  modals.py
src/discord_interactions/: __init__.py  api_client.py  bot.py  config.py
src/discord_publish_bot/: __init__.py  main.py
src/discord_publish_bot/api/: __init__.py  app.py  dependencies.py
src/discord_publish_bot/api/models/: __init__.py
src/discord_publish_bot/api/routes/: __init__.py  discord.py  health.py  publishing.py
src/discord_publish_bot/config/: __init__.py  settings.py
src/discord_publish_bot/discord/: __init__.py  bot.py  interactions.py
src/discord_publish_bot/publishing/: __init__.py  github_client.py  service.py
src/discord_publish_bot/shared/: __init__.py  exceptions.py  types.py  utils.py
src/discord_publish_bot/storage/: __init__.py  azure_storage.py  factory.py  linode_storage.py
src/publishing_api/: __init__.py  config.py  github_client.py  main.py  publishing.py
templates/: adr-template.md  api-docs-template.md  backlog-template.md  changelog-template.md  onboarding-template.md  prd-template.md  runbook-template.md  spec-template.md
tests/: conftest.py  test_basic.py  test_enhanced_publishing.py  test_security_isolation.py
tests/e2e/: test_complete_workflow.py
tests/fixtures/: discord_interactions.json  sample_posts.yaml
tests/integration/: test_api_health.py  test_basic_e2e.py  test_discord_integration.py
tests/unit/: test_config.py  test_discord_interactions.py  test_http_interactions_slug.py  test_modal_integration.py  test_publishing_service.py  test_slug_generation.py
